--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pydantic==1.10.13
 PyJWT==2.8.0
+python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==1.4.50
 sqlalchemy2-stubs==0.0.2a36
