--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,14 @@ services:
   web:
     build: .
     command: sh -c "uvicorn main:app --reload --host=0.0.0.0 --port=8040"
-    ports: 
-      - 8040:8040
+    ports:
+      - 8040
 
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - web
+    ports:
+      - "8042:8042"
